--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,5 @@
         <input type="password" name="pwd"
          (change)="handleChange($event)" value={{formData.pwd}}>
     </div>
-    <!-- <button (click)="submitHandler()">Update</button> -->
-    <button (click)="login()">Sign me in<i class="fa-solid fa-arrow-right"></i></button>
+    <button (click)="submitHandler()">Sign me in<i class="fa-solid fa-arrow-right"></i></button>
 </form>
