--- a/src/app/add-job-details/add-job-details.component.html
+++ b/src/app/add-job-details/add-job-details.component.html
@@ -1,4 +1,4 @@
-<form method="post" action="" onsubmit="return false;">
+<!-- <form method="post" action="" onsubmit="return false;">
     <h2>Create a new Job</h2>
     <div>
         <label>Job Name</label><br>
@@ -21,4 +21,30 @@
         <input type="number" name="salary" (change)="handleChange($event)">
     </div>
     <button (click)="submitHandler()">Add Job</button>
+</form> -->
+
+<form method="post" action="">
+    <h2>Create a new Job</h2>
+    
+    <div>
+        <label>Job Name</label><br>
+        <input type="text" name="jobProfile" (input)="handleChange($event)">
+    </div>
+    <div>
+        <label>Skill</label><br>
+        <input type="text" name="skill" (input)="handleChange($event)">
+    </div>
+    <div>
+        <label>Minimum Experience (in years)</label><br>
+        <input type="number" name="exp_min" (input)="handleChange($event)" onkeydown="return !([69,107,109,110,187,189,190].includes(event.keyCode))">
+    </div>
+    <div>
+        <label>Maximum Experience (in years)</label><br>
+        <input type="number" name="exp_max" (input)="handleChange($event)" onkeydown="return !([69,107,109,110,187,189,190].includes(event.keyCode))">
+    </div>
+    <div>
+        <label>Salary</label><br>
+        <input type="number" name="salary" (input)="handleChange($event)" onkeydown="return !([69,107,109,110,187,189,190].includes(event.keyCode))">
+    </div>
+    <button (click)="submitHandler(); $event.preventDefault()">Add Job</button>
 </form>
