--- a/src/app/update-job-details/update-job-details.component.html
+++ b/src/app/update-job-details/update-job-details.component.html
@@ -1,25 +1,25 @@
-<form method="post" action="" onsubmit="return false;">
+<form method="post" action="">
     <div style="display: flex; align-items: center; justify-content: space-between;"><h2>Update Job </h2> <span class="caption">ID : {{formData.jobId}}</span></div>
     
     <div>
         <label>Job Name</label><br>
-        <input type="text" name="jobProfile" (change)="handleChange($event)" value={{formData.jobProfile}}>
+        <input type="text" name="jobProfile" (input)="handleChange($event)" value={{formData.jobProfile}}>
     </div>
     <div>
         <label>Skill</label><br>
-        <input type="text" name="skill" (change)="handleChange($event)" value={{formData.skill}}>
+        <input type="text" name="skill" (input)="handleChange($event)" value={{formData.skill}}>
     </div>
     <div>
-        <label>Minimum Experience</label><br>
-        <input type="number" name="exp_min" (change)="handleChange($event)" value={{formData.exp_min}}>
+        <label>Minimum Experience (in years)</label><br>
+        <input type="number" name="exp_min" (input)="handleChange($event)" onkeydown="return !([69,107,109,110,187,189,190].includes(event.keyCode))" value={{formData.exp_min}}>
     </div>
     <div>
-        <label>Maximum Experience</label><br>
-        <input type="number" name="exp_max" (change)="handleChange($event)"  value={{formData.exp_max}}>
+        <label>Maximum Experience (in years)</label><br>
+        <input type="number" name="exp_max" (input)="handleChange($event)" onkeydown="return !([69,107,109,110,187,189,190].includes(event.keyCode))" value={{formData.exp_max}}>
     </div>
     <div>
         <label>Salary</label><br>
-        <input type="number" name="salary" (change)="handleChange($event)"  value={{formData.salary}}>
+        <input type="number" name="salary" (input)="handleChange($event)" onkeydown="return !([69,107,109,110,187,189,190].includes(event.keyCode))" value={{formData.salary}}>
     </div>
-    <button (click)="submitHandler()">Update</button>
+    <button (click)="submitHandler(); $event.preventDefault()">Update</button>
 </form>
